--- a/FilmTracker API/FilmTracker API.csproj
+++ b/FilmTracker API/FilmTracker API.csproj
@@ -9,7 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Collection" Version="10.0.0" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FilmTrackerAPI.Application\FilmTrackerAPI.Application.csproj" />
+    <ProjectReference Include="..\FilmTrackerAPI.Infrastructure\FilmTrackerAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
